[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/level_select/level_select_item_locked_header.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffolder/src/gui/level_select/lock_animation.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffolder/assets/fonts/pxlzr_font_s.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_label.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/scaffolder/src/gui/style_box_flat_scalable.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.65098, 0.65098, 0.65098, 0.443137 )
border_color = Color( 0.137255, 0.2, 0.152941, 1 )
corner_detail = 1
script = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.65098, 0.65098, 0.65098, 0.443137 )
border_color = Color( 0.137255, 0.2, 0.152941, 1 )
corner_detail = 1
script = ExtResource( 5 )

[node name="LevelSelectItemLockedHeader" type="PanelContainer"]
self_modulate = Color( 1, 1, 1, 0.572549 )
margin_right = 320.0
margin_bottom = 56.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockAnimation" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0.796078 )
margin_left = 160.0
margin_top = 28.0
margin_right = 160.0
margin_bottom = 28.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HintWrapper" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 320.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Hint" parent="HintWrapper" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 0
text = "(Finish the previous level)"
autowrap = true
font_size = "S"

[connection signal="gui_input" from="." to="." method="_on_LevelSelectItemLockedHeader_gui_input"]
[connection signal="unlock_finished" from="LockAnimation" to="." method="_on_LockAnimation_unlock_finished"]
